<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/blue_background"
    tools:openDrawer="start">

    <include
        android:id="@+id/setting_bar"
        layout="@layout/setting_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText"
        android:layout_marginTop="36dp"
        android:layout_toStartOf="@+id/editText3"
        android:gravity="left|center"
        android:text="@string/change_unit"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/setting_bar"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:gravity="left|center"
        android:text="@string/change_targeted_amount"
        android:textColor="@android:color/background_dark" />

    <RadioGroup
        android:id="@+id/radioButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        
        >

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText"
            android:layout_alignTop="@+id/textView3"
            android:layout_below="@id/radioButtonGroup"
            android:onClick="onRadioButtonClicked"
            android:text="@string/ounces" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton"
            android:layout_below="@+id/radioButtonGroup"
            android:onClick="onRadioButtonClicked"
            android:text="@string/ml" />


    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/editText"
        android:text="@string/ok" />


</RelativeLayout>